--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
     display: flex;
     padding: 15px;
     
-    border: 2px solid teal;
+    border: 2px solid black;
     margin-top: 15px;
     justify-content: space-between;
 
